Fixed center spacing issue on about page

--- a/css/index.css
+++ b/css/index.css
@@ -86,7 +86,7 @@ nav a {
 }
 
 .container {
-    width: 800px;
+    width: 75%;
     margin: 0 auto;
 }
 
@@ -223,15 +223,23 @@ footer nav a {
 .learnMoreContainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     padding: 2em 0 2em 0;
 }
 
 .infoBox {
-    width: calc(50% - 1em);
+    width: calc(50% - 1.2em);
     border-bottom: 1px dashed black;
-    margin: 0 .5em;
     padding: 1em 0 1em 0;
+}
+
+.infoBox img {
+    width: 100%;
+    height: auto;
+}
+
+.infoBox h1 {
+    margin-top: 1rem;
 }
 
 .button {
